[gd_scene load_steps=23 format=2]

[ext_resource path="res://player/PlayerCar.tscn" type="PackedScene" id=1]
[ext_resource path="res://ball/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/roadbg_.jpg" type="Texture" id=3]
[ext_resource path="res://Walls.tscn" type="PackedScene" id=4]
[ext_resource path="res://net/Net.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://assets/BabyTheme.tres" type="Theme" id=8]
[ext_resource path="res://SpawnCheck.gd" type="Script" id=9]
[ext_resource path="res://assets/icon.png" type="Texture" id=10]
[ext_resource path="res://UI/MainMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/Timer.gd" type="Script" id=13]
[ext_resource path="res://comic.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://pickup/HourglassPickup.tscn" type="PackedScene" id=15]
[ext_resource path="res://UI/GameOver.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/toyblockC.png" type="Texture" id=19]
[ext_resource path="res://assets/toyblockA.png" type="Texture" id=20]

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[sub_resource type="Theme" id=11]
resource_name = "Baby Theme"
default_font = SubResource( 6 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 63.9932, 63.9932 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 63.9932, 63.9932 )

[sub_resource type="GDScript" id=15]
script/source = "extends StaticBody2D


func _on_Play_pressed():
	show()
"

[sub_resource type="CircleShape2D" id=10]
radius = 88.0057

[node name="Main" type="Node"]
script = ExtResource( 6 )
pickup = ExtResource( 15 )
ball = ExtResource( 2 )

[node name="OpenMenu" type="Button" parent="."]
pause_mode = 2
margin_left = 968.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 32.0
text = "Menu"

[node name="GameOver" parent="." instance=ExtResource( 17 )]
pause_mode = 2
visible = false

[node name="MainMenu" parent="." instance=ExtResource( 11 )]
visible = false

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true
autostart = true
script = ExtResource( 13 )

[node name="TimerDisplay" type="Label" parent="Timer"]
visible = false
margin_left = 6.0
margin_top = -1.0
margin_right = 270.0
margin_bottom = 56.0
hint_tooltip = "How much time you have left!"
mouse_filter = 1
theme = SubResource( 11 )
theme_type_variation = "Time"
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Time:"

[node name="ScoreDisplay" type="Label" parent="."]
visible = false
margin_left = 6.0
margin_top = 56.0
margin_right = 141.0
margin_bottom = 113.0
hint_tooltip = "How many goals you've scored!"
mouse_filter = 1
theme = ExtResource( 8 )
text = "Score: "

[node name="Environment" type="Node2D" parent="."]

[node name="Walls" parent="Environment" instance=ExtResource( 4 )]
position = Vector2( 0, -1 )

[node name="RoadBG" type="Sprite" parent="Environment"]
position = Vector2( 512, 299 )
scale = Vector2( 1.00195, 1.00333 )
z_index = -2
texture = ExtResource( 3 )

[node name="ToyBlocks" type="StaticBody2D" parent="Environment"]
visible = false
z_index = -1

[node name="ACollisionShape2D" type="CollisionShape2D" parent="Environment/ToyBlocks"]
position = Vector2( 923, 43.5 )
rotation = 0.785398
shape = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="Environment/ToyBlocks/ACollisionShape2D"]
texture = ExtResource( 20 )

[node name="CCollisionShape2D2" type="CollisionShape2D" parent="Environment/ToyBlocks"]
position = Vector2( 923, 556.5 )
rotation = 0.785398
shape = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="Environment/ToyBlocks/CCollisionShape2D2"]
rotation = -1.5708
texture = ExtResource( 19 )

[node name="PlayerCar" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 141, 283 )
z_index = -1
collision/safe_margin = 1.0
moving_platform_apply_velocity_on_leave = 2

[node name="Net" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, 0 )
script = SubResource( 15 )

[node name="Sprite" parent="Net" index="1"]
z_index = 1

[node name="SpawnCheck" type="Area2D" parent="."]
visible = false
monitorable = false
script = ExtResource( 9 )

[node name="SpawnCheckShape" type="CollisionShape2D" parent="SpawnCheck"]
shape = SubResource( 10 )

[node name="DebugSprite" type="Sprite" parent="SpawnCheck"]
scale = Vector2( 2.1875, 2.1875 )
z_index = -1
texture = ExtResource( 10 )

[connection signal="get_new_position" from="." to="SpawnCheck" method="_on_Main_get_new_position"]
[connection signal="reset" from="." to="Timer" method="_on_Main_reset"]
[connection signal="reset" from="." to="PlayerCar" method="_on_Main_reset"]
[connection signal="update_score" from="." to="GameOver" method="_on_Main_update_score"]
[connection signal="pressed" from="OpenMenu" to="." method="_on_OpenMenu_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/TryAgain" to="GameOver" method="_on_TryAgain_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="change_player_sprite" from="MainMenu" to="PlayerCar" method="_on_MainMenu_change_player_sprite"]
[connection signal="pressed" from="MainMenu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MainMenu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="score" from="Net/NetDetectArea2D" to="." method="_on_NetDetectArea2D_score"]
[connection signal="body_entered" from="SpawnCheck" to="SpawnCheck" method="_on_SpawnCheck_body_entered"]
[connection signal="newPosition" from="SpawnCheck" to="." method="_on_SpawnCheck_newPosition"]

[editable path="GameOver"]
[editable path="MainMenu"]
[editable path="PlayerCar"]
[editable path="Net"]
